<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/two_state_preference">

        <CheckBoxPreference
            android:key="@string/checkbox_key"
            android:summary="CheckBox Summary"
            android:title="CheckBox Title" />

        <SwitchPreference
            android:key="@string/switch_key"
            android:summary="Switch Summary"
            android:title="Switch Title" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/dialog_preference">

        <EditTextPreference
            android:key="@string/edittext_key"
            android:title="EditText Title"
            android:summary="EditText Summary"
            android:dialogTitle="Please Input Your Number Password :"
            android:inputType="numberPassword"/>

        <ListPreference
            android:key="@string/list_key"
            android:title="List Title"
            android:summary="List Summary"
            android:dialogTitle="This is a List Title"
            android:entries="@array/list_entry"
            android:entryValues="@array/list_entry_values"/>

        <MultiSelectListPreference
            android:key="@string/multi_list_key"
            android:title="Multi List Title"
            android:summary="Multi List Summary"
            android:entries="@array/list_entry"
            android:entryValues="@array/list_entry_values"
            android:dialogTitle="This is a Multi List Title"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/intent_preference">

        <PreferenceScreen
            android:title="Next Screen Preference"
            android:summary="Click it to Another Screen">

            <PreferenceCategory
                android:title="Next Screen CheckBox">

            <CheckBoxPreference
                android:title="CheckBox Title"
                android:summary="This ia a CheckBox of Next Screen"
                android:summaryOn="On"
                android:summaryOff="Off"/>

            </PreferenceCategory>

        </PreferenceScreen>

        <PreferenceScreen
            android:title="Jump Intent Preference"
            android:summary="Click it to Open Activity">

            <intent
                android:action="android.intent.action.VIEW"
                android:data="http://www.baidu.com"/>

        </PreferenceScreen>

    </PreferenceCategory>


    <PreferenceCategory
        android:title="@string/depencies_preference">

        <CheckBoxPreference
            android:key="@string/parent_key"
            android:title="CheckBox Parent Title"
            android:summary="CheckBox Parent Summary"
            android:checked="false"/>

        <CheckBoxPreference
            android:key="@string/child_key"
            android:title="CheckBox Child Title"
            android:summary="CheckBox Child Summary"
            android:checked="true"
            android:dependency="@string/parent_key"
            android:layout="?android:attr/preferenceLayoutChild"/>

    </PreferenceCategory>


    <PreferenceCategory
        android:title="@string/ringtone_preference">

        <RingtonePreference
            android:key="@string/ringtone_preference"
            android:title="Ringtone Title"
            android:summary="Ringtone Summary"
            android:showDefault="true"
            android:ringtoneType="notification"/>

    </PreferenceCategory>

</PreferenceScreen>